--- a/index.html
+++ b/index.html
@@ -12,7 +12,37 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class-"card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>One of three cornerstone languages used in web development. Made up of elements that together provide content on the basic framework of all pages on the web.</li>
+          <li>Elements: can be seen on a page and divide/describe content to browsers and developers.</li>
+          <li>Elements inside of other element are considered child elements (i.e.h1, p, ul, etc.), with the element that holds them being the parent element.</li>
+          <li>Opening tag: used at the beginning of content</li>
+          <li>Closing tag: used at the end of content</li>
+          
+        </ul>
+      </section>
+      <section class-"card" id="CSS-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>enter your student notes here</li>
+        </ul>
+
+      </section>
+      <section class-"card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git Status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+        </ul>
+      </section>
+      <section class-"card" id="Javascript-section">
+        <h2>Jave Script</h2>
+        <ul>
+          <li>enter your student notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
