added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class-"card" id="html-section">
+      <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
           <li>One of three cornerstone languages used in web development. Made up of elements that together provide content on the basic framework of all pages on the web.</li>
@@ -23,21 +24,21 @@
           
         </ul>
       </section>
-      <section class-"card" id="CSS-section">
+      <section class="card" id="CSS-section">
         <h2>CSS</h2>
         <ul>
           <li>enter your student notes here</li>
         </ul>
 
       </section>
-      <section class-"card" id="git-section">
+      <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
           <li>Git Status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
         </ul>
       </section>
-      <section class-"card" id="Javascript-section">
+      <section class="card" id="Javascript-section">
         <h2>Jave Script</h2>
         <ul>
           <li>enter your student notes here</li>
