added JS to project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
       <section class="card" id="Javascript-section">
         <h2>Jave Script</h2>
         <ul>
-          <li>enter your student notes here</li>
+          <li>A high level dynamic programming language that allows users to interact with websites. Takes a static HTML/CSS and makes it interactive.</li>
+          <li>Variable: a named container that can store data in our code.</li>
+          <li>Conditional Statements and Loops: control how code order is executed.</li>
+          <li>Arrays: a single variable used to hold a group of data.</li>
+          <li>"for" Loop: uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li>"let" Variable: allows us to reassign the value of the variable over time. Unlike the "const" variable, "let" isn't static.</li>
         </ul>
       </section>
     </main>
@@ -49,5 +54,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
