--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
           <li>Arrays: a single variable used to hold a group of data.</li>
           <li>"for" Loop: uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
           <li>"let" Variable: allows us to reassign the value of the variable over time. Unlike the "const" variable, "let" isn't static.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
