--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -27,7 +28,12 @@
       <section class="card" id="CSS-section">
         <h2>CSS</h2>
         <ul>
-          <li>enter your student notes here</li>
+          <li>CSS: defines how webpages are presented</li>
+          <li>There are three ways to stye CSS; inline, internal, and external CSS.</li>
+          <li>Inline CSS: style an element directly in the HTML file. </li>
+          <li>Internal CSS: style an entire section.</li>
+          <li>External CSS: Most common and preferred because it allows the dev to keep all their CSS rules in a separate file.</li>
+          <li>Class attribute: a CSS rule that adds styles to certain attributes (designated by .card)</li>
         </ul>
 
       </section>
